# modbus

./: .gitignore  CMakeLists.txt  README.md  modbus.hwprj
include/: cpp_common.h  funcs.h  ini.h
source/common/: funcs.cpp  ini.cpp
source/util/: crc.cpp  modbus.cpp  unixcomm.cpp  w32comm.cpp
